--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a CS student at Kennesaw State University</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Albany GA and moved to Marietta GA about 2 years ago/p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm a game developer and software engineer</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I haven't decived on a dream job yet, there are too many options</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Marietta GA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Great working options</p>
     </section>
 
     <footer id="footer">
